# UE5CEDumper

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_zh-TW.md  Claude.MD  GithubUE5CEDumperbuild_log.txt  Improvement_Analysis.md  LICENSE  Readme.MD  Readme_zh-TW.MD  build.cmd  build.ps1  build_dll.ps1  build_temp.bat  count_cloc.bat  sync_tools.cmd  sync_tools.ps1  update_submodule.cmd
dll/: CMakeLists.txt
dll/src/: Aura.cpp  Aura.h  BuildInfo.h.in  CEPlugin.cpp  Constants.h  ExportAPI.cpp  ExportAPI.h  FNamePool.cpp  FNamePool.h  Fern.cpp  Fern.h  Flamme.cpp  Flamme.h  Frieren.cpp  Frieren.h  Genau.cpp  Genau.h  Grimoire.h  Heiter.cpp  Himmel.h  HintCache.cpp  HintCache.h  Logger.cpp  Logger.h  Lugner.cpp  Macht.cpp  Macht.h  Memory.cpp  Memory.h  Methode.cpp  Mimic.cpp  Mimic.h  ObjectArray.cpp  ObjectArray.h  OffsetFinder.cpp  OffsetFinder.h  PipeProtocol.h  PipeServer.cpp  PipeServer.h  ProxyVersion.def  (+14 more)
docs/: CE-Bugs-Minesweeper.md  UE 4.2 AOBs.txt  UE5CEDumper-UX.md  aobmaker-integration.md  architecture.md  dev-log.md  dll-spec.md  lessons-learned.md  naming-convention.md  pipe-protocol.md  references.md  session-2026-03-05.md  simd-scanning-notes.md  technical-notes.md  test-games.md  ue4ss-analysis.md  ufunction-invoker-roadmap.md  ui-spec.md
memory/: MEMORY.md
scripts/: DEPLOY_README.md  README.md  UE5CEDumper.CT  build_all.ps1  test_pipe.ps1  ue5_dissect.lua  ue5_invoke.lua  ue5dump.lua  utils.lua
tools/ghidra/: ExportUESymbols.ghidra.py  ExtractAOBContext.ghidra.py  run_all_aob_export.py  run_headless_export.py
ui/: UE5DumpUI.sln
ui/UE5DumpUI/: App.axaml  App.axaml.cs  Constants.cs  Program.cs  UE5DumpUI.csproj  ViewLocator.cs  app.manifest
ui/UE5DumpUI.Tests/: AddressHelperTests.cs  AobUsageServiceTests.cs  BookmarkTests.cs  CeXmlExportServiceTests.cs  CsxExportServiceTests.cs  DumpServiceTests.cs  FieldValueConverterTests.cs  HexViewViewModelTests.cs  InvokeParamDialogTests.cs  InvokeScriptTests.cs  KnownStructLayoutTests.cs  ModelTests.cs  ParamBufferBuilderTests.cs  ProxyDeployTests.cs  SdkExportServiceTests.cs  SymbolExportServiceTests.cs  UE5DumpUI.Tests.csproj  UsmapExportServiceTests.cs
ui/UE5DumpUI/Converters/: AddressToStringConverter.cs  BoolToVisibilityConverter.cs
ui/UE5DumpUI/Core/: AddressHelper.cs  FieldValueConverter.cs  IAobMakerBridge.cs  IDumpService.cs  ILoggingService.cs  IPipeClient.cs  IPlatformService.cs  IProxyDeployService.cs  Res.cs
ui/UE5DumpUI/Models/: AobMakerMessage.cs  CePointerInfo.cs  ClassInfoModel.cs  ClassListResult.cs  DataTableWalkResult.cs  DetectedGame.cs  EngineState.cs  EnumDefinition.cs  FieldInfoModel.cs  FunctionInfoModel.cs  HexViewRow.cs  InstanceResult.cs  InstanceWalkResult.cs  InvokeFunctionResult.cs  LiveFieldValue.cs  ObjectDetail.cs  ObjectListResult.cs  PropertySearchResult.cs  RescanModels.cs  ScanStatusResult.cs  SymbolEntry.cs  UObjectNode.cs  WorldWalkResult.cs
ui/UE5DumpUI/Resources/Strings/: en.axaml  ja.axaml  zh-TW.axaml
ui/UE5DumpUI/Services/: AobMakerBridgeService.cs  CeXmlExportService.cs  CsxExportService.cs  DumpService.cs  InvokeScriptGenerator.cs  KnownStructLayouts.cs  LocalizationService.cs  LoggingService.cs  ParamBufferBuilder.cs  PipeClient.cs  ProxyDeployService.cs  SdkExportService.cs  SymbolExportService.cs  UsmapExportService.cs  VdfParser.cs  WindowsPlatformService.cs
ui/UE5DumpUI/ViewModels/: ClassStructViewModel.cs  GameClassFilterViewModel.cs  HexViewViewModel.cs  InstanceFinderViewModel.cs  LiveWalkerViewModel.cs  MainWindowViewModel.cs  ObjectTreeViewModel.cs  PointerPanelViewModel.cs  PropertySearchViewModel.cs  ProxyDeployViewModel.cs  ViewModelBase.cs
ui/UE5DumpUI/Views/: ClassStructPanel.axaml  ClassStructPanel.axaml.cs  GameClassFilterPanel.axaml  HexViewPanel.axaml  HexViewPanel.axaml.cs  InstanceFinderPanel.axaml  InstanceFinderPanel.axaml.cs  InvokeParamDialog.cs  LiveWalkerPanel.axaml  LiveWalkerPanel.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ObjectTreePanel.axaml  ObjectTreePanel.axaml.cs  PointerPanel.axaml  PointerPanel.axaml.cs  PropertySearchPanel.axaml  PropertySearchPanel.axaml.cs  ProxyDeployPanel.axaml  ProxyDeployPanel.axaml.cs
